Going to push to online git hub page

--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html> 
     <head>
             <title>
                 My Webpage!
             </title>
     </head>
     <body>
-        <p> Hello World! Hello Again! Hello A Third Time!</p>
+        <link rel="stylesheet" href = "styles.css">
+        <style>
+            td {
+                color:rgb(177, 18, 18)
+                
+            }
+        </style>
+        <h1> Hello World! Hello Again! Hello A Third Time!</h1>
+        <h2> Unordered List</h2>
+        <ul>
+            <li> I like Html </li>
+            <li> I forgot how to do CSS</li>
+        </ul>
+        <h2> Ordered List</h2> 
+        <ol>
+            <li> I am lowkey confused about this code</li>
+            <li> Writting tags can be confusing someties</li>
+        </ol>
+        <h2> Read Organic Chemistry For Fun!</h2>
+        <img src = "Lecture.png" height="50%" width="50%">
+
+        <table> 
+            <tr> 
+                <th> I am Head 1</th>
+                <th> I am Head 2</th>
+                <th> I am Head 3</th>
+            </tr>
+            <tr> 
+                <td> I am Data 1</td>
+                <td> I am Data 2</td>
+                <td> I am Data 3</td>
+            </tr>
+        </table>
+        <h2 style="color: rgb(35, 27, 148);text-align: center;"> What's Your Favorite Animal?</h2>
+        <form> 
+            <input type="text" placeholder="Enter Your Response Here" name = "animal">
+            <button>Submit</button>
+        </form>
+        <p> YAAAY</p>
     </body>
 </html>
